src/app/globals.css
@import "tailwindcss";

:root {
  --background: white;
  --foreground: black;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: black;
    --foreground: white;
  }
} */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-dm-sans);
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-dm-sans);
}

button {
  cursor: pointer;
  font-family: var(--font-dm-sans);
}

#root,
body {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

@layer utilities {
  .hide-google-loading > div > div:first-child {
    display: none;
  }
}

.slick-slide > div {
  margin: 0 10px;
}

